fix: start section mobile version; code refactoring

--- a/src/css/app.scss
+++ b/src/css/app.scss
@@ -57,6 +57,10 @@ h1 {
     font-size: 50px !important;
     line-height: 60px !important;
   }
+  h3 {
+    font-size: 20px !important;
+    line-height: 30px !important;
+  }
 }
 
 h2 {
